crates/cli/src/snapshots/speclink_cli__human__tests__array_of_objects.snap
---
source: crates/cli/src/human.rs
expression: render_human(&v)
---
artifacts:
  - capability: null
    kind: proposal
  - capability: user-auth
    kind: spec
