crates/cli/src/snapshots/speclink_cli__human__tests__array_of_scalars.snap
---
source: crates/cli/src/human.rs
expression: render_human(&v)
---
capabilities:
  - rate-limiting
  - user-auth
