crates/cli/src/snapshots/speclink_cli__human__tests__flat_object.snap
---
source: crates/cli/src/human.rs
expression: render_human(&v)
---
active: true
name: demo-billing
version: 1
