crates/cli/src/snapshots/speclink_cli__human__tests__nested_object.snap
---
source: crates/cli/src/human.rs
expression: render_human(&v)
---
change:
  name: demo-billing
  version: 1
